2003-04-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/network_support.c (init_loopback_interface): Close the
	socket when things go wrong otherwise we leak sockets.

	* src/tftp_server.c (tftpd_server): Added support for IPv6 as well
	as IPv4. Extended the multithreading support so that it works
	correctly when there are multiple servers on multiple ports.  
	* doc/tcpip.sgml: Documentation for the changes made to the tftp
	server.

2003-04-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/linux_echo.c: Renamed to....
	* tests/host_echo.c: this new file. Change comment to indicate this.

	* tests/make.linux: Renamed to....
	* tests/make.host: this new file. Change comment to indicate this.
	Also linux_echo -> host_echo, and add clean target.

	* doc/tcpip.sgml: Reflect above.

2003-04-11  Michael Checky  <Michael_Checky@Thermoking.com>

	* tests/nc_test_framework.h: deleted '#include <net/route.h>'.
	* tests/linux_echo.c: added '#include <netinet/in_systm.h>',
	deleted '#include <net/route.h>'.
	* tests/tcp_sink.c: ditto.
	* tests/tcp_souce.c: ditto.
	* tests/nc_test_slave.c: changed 'bool' to 'int' because the compiler
	didn't like 'bool'.

2003-04-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/network_support.c (init_all_network_interfaces): Wait upto 4
	seconds for a router solicit message to be received. Once we have
	received the message we know we have a valid IPv6 address.

	* src/tftp_client.c: Added support for IPv6. This requires two new
	functions, tftp_client_{get|put} which are protocol version
        independent.
	* tests/tftp_client_test.c (tftp_test): Added tests which use IPv6
	addresses.
	
2003-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/getaddrinfo.c (getaddrinfo): Correctly deal with node when
	its not NULL. Its OK for the address to not parse for an address
	family when AF_UNSPEC is passed in hints. Also get the socktype
	correct when wildcarding for services that use UDP.